syntax = "proto3";
package logic.conf;

option go_package = "edu/logic/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Service service = 1;
  Server server = 2;
  Data data = 3;
  Reg reg = 4;
  App app = 5;
}

message Service {
  string name = 1;
  string version = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string address = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string address = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    google.protobuf.Duration dial_timeout = 5;
  }
  message RabbitMq {
    string address = 1;
  }
  message RPC {
    google.protobuf.Duration dial = 1;
    google.protobuf.Duration timeout = 2;
  }
  Database database = 1;
  Redis redis = 2;
  RabbitMq rabbitMq = 3;
  RPC rpc = 4;
}

message Reg {
  message Etcd {
    repeated string endpoints = 1;
    google.protobuf.Duration dialTimeout = 2;
  }
  message Instance {
    string zone = 1;
    string env = 2;
    string hostname = 3;
    string appid = 4;
    repeated string addrs = 5;
  }
  Etcd etcd = 1;
  Instance instance = 2;
}

message App {
  message Node {
    string default_domain = 1;
    string host_domain = 2;
    google.protobuf.Duration heartbeat = 3;
    int32 tpc_port = 4;
    int32 ws_port = 5;
    int32 wss_port = 6;
    int32 heartbeatMax = 7;
    int32 regionWeight = 8;
  }
  Node node = 1;
  repeated string regions = 2;
}